# code-monsters

./: .gitattributes  .gitignore  AGENTS.md  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  wrangler.jsonc
docs/: ai-sprite-asset-pipeline-prompt.md  architecture.md  balance-check.md  balance-simulation.md  build-synergy-matrix.md  duel-design.md  game-system-spec.md  skill-power-formula.md  sprite-asset-architecture.md  sprite-asset-troubleshooting.md  sprite-asset-workflow.md  state-circuit-synergy-matrix.md  unity-migration.md
game-data/: game-balance.json
scripts/: ability-test.mjs  balance-check.mjs  berserker-test.mjs  browser-smoke.mjs  calculate-skill-power.mjs  catalog-test.mjs  combat-test.mjs  control-test.mjs  core-test.mjs  corrosion-test.mjs  cost-test.mjs  debug-data-test.mjs  debug-room-test.mjs  field-test.mjs  generate-build-matrix.ts  healing-test.mjs  home-run-test.mjs  jump-test.mjs  knockback-test.mjs  loadout-test.mjs  melee-test.mjs  miss-test.mjs  mobile-ux-test.mjs  movement-test.mjs  poison-test.mjs  projectile-test.mjs  python-asset-setup.mjs  python-asset-tests.mjs  run-test.mjs  simulate-balance.mjs  skill-shop-test.mjs  sniper-test.mjs  synergy-report.mjs  throw-test.mjs  unity-assets-compile.mjs  unity-assets-test.mjs  (+3 more)
tools/sprite-pipeline/: pyproject.toml
tools/sprite-pipeline/src/sprite_pipeline/: __init__.py  background.py  cli.py  colors.py  models.py  normalize.py  pipeline.py  quality.py  report.py
tools/sprite-pipeline/tests/: test_background.py  test_pipeline.py
(+140 files in other folders)
